--- a/dashboard/templates/dashboard/edit.html
+++ b/dashboard/templates/dashboard/edit.html
@@ -53,7 +53,7 @@
     {{ form.media }}
 
     <div class="dashboard-form">
-        <form method="post" enctype="multipart/form-data">
+        <form method="post">
             {% csrf_token %}
             <h2>Edit Blog</h2>
             <label>Date</label>
