--- a/dashboard/templates/dashboard/patient.html
+++ b/dashboard/templates/dashboard/patient.html
@@ -109,6 +109,9 @@
         .pagination-link:hover {
             background-color: #f3a28c;
         }
+        .hh{
+            display: flex;
+        }
     
         .current-page {
             margin: 0 10px;
