--- a/dashboard/templates/dashboard/patient_detail.html
+++ b/dashboard/templates/dashboard/patient_detail.html
@@ -103,10 +103,9 @@
             <input type="text" name="address" placeholder="Address" class="patient-details" required>
             <input type="text" name="phoneNumber" placeholder="Phone Number" class="patient-details" required>
         </div>
-        <!-- <div class="holaa">
+        <div class="holaa">
             <input type="date" name="dob" placeholder="Date of Birth" required>
-            <textarea type="text" name="remarks" placeholder="Remarks"></textarea>
-        </div> -->
+        </div>
         <div id="image-upload-container" class="how">
             <input type="date" name="Date" class="hehe"  multiple>
             <textarea name="Remarks" placeholder="Remarks" rows="5" class="textarea1"></textarea>
