--- a/dashboard/templates/dashboard/appoinments.html
+++ b/dashboard/templates/dashboard/appoinments.html
@@ -57,6 +57,29 @@
     .edit-btn:hover, .delete-btn:hover {
         background-color: rgb(255, 131, 131);
     }
+    .pagination {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+    .step-links {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+    }
+
+    .pagination-link {
+        padding: 5px 10px;
+        background-color: #fcb9a7;
+        color: black;
+        text-decoration: none;
+        border-radius: 4px;
+        transition: background-color 0.3s;
+    }
+
+    .pagination-link:hover {
+        background-color: #f3a28c;
+    }
 </style>
 
 <div class="appointments-table">
@@ -105,20 +128,16 @@
             <a href="?page=1">&laquo; first</a>
             <a href="?page={{ appoinments.previous_page_number }}" class="pagination-link">previous</a>
         {% endif %}
-    
+
         <span class="current-page">
             Page {{ appoinments.number }} of {{ appoinments.paginator.num_pages }}.
         </span>
-        
-        <span class="current-page">
-            Page {{ appoinments.number }} of {{ appoinments.paginator.num_pages }}.
-        </span>
-        
+
         {% if appoinments.has_next %}
             <a href="?page={{ appoinments.next_page_number }}" class="pagination-link">next</a>
             <a href="?page={{ appoinments.paginator.num_pages }}">last &raquo;</a>
         {% endif %}
-    </span>    
+    </span>
 </div>
 
 {% endblock %}
