--- a/dashboard/templates/dashboard/patient_detail.html
+++ b/dashboard/templates/dashboard/patient_detail.html
@@ -17,7 +17,7 @@
         padding: 30px;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        margin: 0 auto 20px;
+        margin: 82px auto 20px;
         max-width: 60%; /* Adjusted max-width for better responsiveness */
         display: grid;
         gap: 15px;
