--- a/dashboard/templates/dashboard/login.html
+++ b/dashboard/templates/dashboard/login.html
@@ -27,9 +27,9 @@
            
         }
 
-        .login-container:hover {
+        {% comment %} .login-container:hover {
             transform: scale(1.05);
-        }
+        } {% endcomment %}
 
         .login-container input {
             width: 100%;
