--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+=           </div>
             <div class="flex justify-between gap-3">
                 {% comment %} <div class=" flex justify-center">
                     <button class="border border-black w-[10rem] h-[3rem] ipad_min:w-28 ipad_min:h-10 read mobile:h-10 mobile:w-28 close-button" id="cancelbutton">close</button>
