--- a/dashboard/templates/dashboard/patient_detail.html
+++ b/dashboard/templates/dashboard/patient_detail.html
@@ -22,6 +22,7 @@
         display: grid;
         gap: 15px;
         grid-template-columns: 1fr; /* Updated to a single column */
+        margin-top:3rem;
     }
 
     .patient-details h2 {
@@ -104,6 +105,7 @@
         background-color: #b85236;
         color: white;
     }
+    
 </style>
 
 <div class="patient-details">
