--- a/dashboard/templates/dashboard/patient_edit.html
+++ b/dashboard/templates/dashboard/patient_edit.html
@@ -21,6 +21,7 @@
         display: grid;
         gap: 15px;
         grid-template-columns: 1fr; /* Updated to a single column */
+        margin-top:3rem;
     }
 
     .patient-details h2 {
@@ -103,6 +104,50 @@
         background-color: #b85236;
         color: white;
     }
+    .search-field {
+        margin-bottom: 15px;
+    }
+    .search-field {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+    .search-label {
+        margin-bottom: 5px;
+        display: block;
+        color: #555;
+        font-weight: bold;
+    }
+     .pagination {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .pagination a {
+        color: #fff;
+        background-color: #007bff;
+        border: 1px solid #007bff;
+        padding: 8px 16px;
+        text-decoration: none;
+        transition: background-color 0.3s;
+    }
+
+    .pagination a:hover {
+        background-color: #0056b3;
+    }
+
+    .pagination .active {
+        background-color: #0056b3;
+    }
+
+    .pagination .disabled {
+        color: #ddd;
+        pointer-events: none;
+    }
 </style>
 <div class="patient-details">
     <h2>Edit Patient Details</h2>
@@ -170,45 +215,74 @@
         </div> {% endcomment %}
 
         <h3>Additional Remarks</h3>
+        <label for="dateSearch" class="search-label">Search</label>
+        
+        <!-- Style the search field -->
+        <input type="date" id="dateSearch" class="search-field" placeholder="Search by Date">
         {% for remark in remarks %}
-        <div class="date-remarks-group">
-            <div>
-                <label for="date_{{ remark.id }}">Date:</label>
-                <input type="date" id="date_{{ remark.id }}" name="date_{{ remark.id }}" value="{% if remark.date %}{{ remark.date|date:'Y-m-d' }}{% endif %}">
+            <div class="date-remarks-group">
+                <div>
+                    <label for="date_{{ remark.id }}">Date:</label>
+                    <input type="date" id="date_{{ remark.id }}" name="date_{{ remark.id }}" value="{% if remark.date %}{{ remark.date|date:'Y-m-d' }}{% endif %}">
+                </div>
+                <div>
+                    <label for="remarks_{{ remark.id }}">Remarks:</label>
+                    <textarea id="remarks_{{ remark.id }}" name="remarks_{{ remark.id }}" rows="5">{{ remark.remarks }}</textarea>
+                </div>
             </div>
-            <div>
-                <label for="remarks_{{ remark.id }}">Remarks:</label>
-                <textarea id="remarks_{{ remark.id }}" name="remarks_{{ remark.id }}" rows="5">{{ remark.remarks }}</textarea>
-            </div>
-        </div>
         {% endfor %}
+
+        {% if remarks.paginator.num_pages > 1 %}
+            <div class="pagination">
+                <span class="step-links">
+                    {% if remarks.has_previous %}
+                        <a href="?page=1">&laquo; first</a>
+                        <a href="?page={{ remarks.previous_page_number }}">previous</a>
+                    {% endif %}
+            
+                    {% comment %} <span class="current">
+                        Page {{ remarks.number }} of {{ remarks.paginator.num_pages }}.
+                    </span> {% endcomment %}
+            
+                    {% if remarks.has_next %}
+                        <a href="?page={{ remarks.next_page_number }}">next</a>
+                        <a href="?page={{ remarks.paginator.num_pages }}">last &raquo;</a>
+                    {% endif %}
+                </span>
+            </div>
+        
+        {% endif %}
 
         <div class="dynamic-fields" id="dynamicFieldsContainer"></div>
         <div class="button-group">
             <button type="submit">Save Changes</button>
-            <button type="button" onclick="addImageField()">Add</button>
+            <button type="button" onclick="addDynamicFields()">Add</button>
         </div>
     </form>
 
     <script>
-        function addImageField() {
-        var container = document.getElementById('dynamicFieldsContainer');
-
-        // Create a new input element for date
-        var dateInput = document.createElement('input');
-        dateInput.type = 'date';
-        dateInput.name = 'Date';
-        dateInput.classList.add('hehe');
-        container.appendChild(dateInput);
-
-        // Create a new textarea element for remarks
-        var remarksTextarea = document.createElement('textarea');
-        remarksTextarea.name = 'Remarks';
-        remarksTextarea.placeholder = 'Remarks';
-        remarksTextarea.rows = 5;
-        remarksTextarea.classList.add('textarea1');
-        container.appendChild(remarksTextarea);
+        function addDynamicFields() {
+            var container = document.getElementById('dynamicFieldsContainer');
+            
+            // Incremental index to ensure unique names for each dynamic field
+            var index = container.children.length / 2 + 1;
+    
+            // Create a new input element for date
+            var dateInput = document.createElement('input');
+            dateInput.type = 'date';
+            dateInput.name = 'dynamic_dates_' + index;
+            dateInput.classList.add('hehe');
+            container.appendChild(dateInput);
+    
+            // Create a new textarea element for remarks
+            var remarksTextarea = document.createElement('textarea');
+            remarksTextarea.name = 'dynamic_remarks_' + index;
+            remarksTextarea.placeholder = 'Remarks';
+            remarksTextarea.rows = 5;
+            remarksTextarea.classList.add('textarea1');
+            container.appendChild(remarksTextarea);
         }
     </script>
+    
 </div> 
 {% endblock %}
