--- a/dashboard/templates/dashboard/patient_edit.html
+++ b/dashboard/templates/dashboard/patient_edit.html
@@ -108,7 +108,7 @@
         margin-bottom: 15px;
     }
     .search-field {
-        width: 100%;
+        width: 20%;
         padding: 10px;
         box-sizing: border-box;
         border: 1px solid #ccc;
@@ -147,6 +147,40 @@
     .pagination .disabled {
         color: #ddd;
         pointer-events: none;
+    }
+    .patient-actions {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    .search-form {
+        display: flex;
+        gap: 10px;
+    }
+
+    .search-field input {
+        {% comment %} width: 20%; {% endcomment %}
+        padding: 8px;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 12px;
+    }
+
+    .add-details-btn {
+        padding: 8px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        font-size: 12px;
+    }
+
+    .add-details-btn:hover {
+        background-color: #0056b3;
     }
 </style>
 <div class="patient-details">
@@ -215,19 +249,28 @@
         </div> {% endcomment %}
 
         <h3>Additional Remarks</h3>
-        <label for="dateSearch" class="search-label">Search</label>
+        <div class="patient-actions">
+            <form method="get" action="{% url 'dashboard:patient' %}" class="search-form">
+                <div class="search-field">
+                    <input type="date" id="dateSearch" class="search-field" placeholder="Search by Date">
+                </div>
+                <button type="submit" class="add-details-btn">Search</button>
+            </form>
+            
+        </div>
         
         <!-- Style the search field -->
         <input type="date" id="dateSearch" class="search-field" placeholder="Search by Date">
         {% for remark in remarks %}
             <div class="date-remarks-group">
+                <h3>Appointment: {{ forloop.counter }}</h3>
                 <div>
                     <label for="date_{{ remark.id }}">Date:</label>
                     <input type="date" id="date_{{ remark.id }}" name="date_{{ remark.id }}" value="{% if remark.date %}{{ remark.date|date:'Y-m-d' }}{% endif %}">
                 </div>
                 <div>
                     <label for="remarks_{{ remark.id }}">Remarks:</label>
-                    <textarea id="remarks_{{ remark.id }}" name="remarks_{{ remark.id }}" rows="5">{{ remark.remarks }}</textarea>
+                    <textarea id="remarks_{{ remark.id }}" name="remarks_{{ remark.id }}" rows="10">{{ remark.remarks }}</textarea>
                 </div>
             </div>
         {% endfor %}
