--- a/dashboard/templates/dashboard/patient_edit.html
+++ b/dashboard/templates/dashboard/patient_edit.html
@@ -180,7 +180,7 @@
     }
 
     .add-details-btn:hover {
-        background-color: #0056b3;
+        background-color: #ff8563;
     }
 </style>
 <div class="patient-details">
