--- a/dashboard/templates/dashboard/patient_edit.html
+++ b/dashboard/templates/dashboard/patient_edit.html
@@ -128,24 +128,24 @@
     }
 
     .pagination a {
-        color: #fff;
-        background-color: #007bff;
-        border: 1px solid #007bff;
+        color: black;
+        background-color: #ff9c80;
+        border: 1px solid #ff9c80;
         padding: 8px 16px;
         text-decoration: none;
         transition: background-color 0.3s;
     }
 
     .pagination a:hover {
-        background-color: #0056b3;
+        background-color: #ff9c80;
     }
 
     .pagination .active {
-        background-color: #0056b3;
+        background-color:#ff9c80;
     }
 
     .pagination .disabled {
-        color: #ddd;
+        color: black;
         pointer-events: none;
     }
     .patient-actions {
@@ -170,8 +170,8 @@
 
     .add-details-btn {
         padding: 8px;
-        background-color: #007bff;
-        color: white;
+        background-color: #ff9c80;
+        color: black;
         border: none;
         border-radius: 4px;
         cursor: pointer;
@@ -250,17 +250,14 @@
 
         <h3>Additional Remarks</h3>
         <div class="patient-actions">
-            <form method="get" action="{% url 'dashboard:patient' %}" class="search-form">
-                <div class="search-field">
-                    <input type="date" id="dateSearch" class="search-field" placeholder="Search by Date">
-                </div>
-                <button type="submit" class="add-details-btn">Search</button>
+            <form method="get" action="{% url 'dashboard:patient_edit' patient.id %}" class="search-form">
+                <input type="date" name="dateSearch" class="search-field" placeholder="Search by Date">
+                <button type="submit" class="add-details-btn" style="margin-left:1rem;height:3rem;margin-top:-1rem;">Search</button>
             </form>
-            
         </div>
         
         <!-- Style the search field -->
-        <input type="date" id="dateSearch" class="search-field" placeholder="Search by Date">
+        {% comment %} <input type="date" id="dateSearch" class="search-field" placeholder="Search by Date"> {% endcomment %}
         {% for remark in remarks %}
             <div class="date-remarks-group">
                 <h3>Appointment: {{ forloop.counter }}</h3>
@@ -296,7 +293,9 @@
         
         {% endif %}
 
-        <div class="dynamic-fields" id="dynamicFieldsContainer"></div>
+        <div class="dynamic-fields" id="dynamicFieldsContainer">
+            <!-- Fields for dynamically added dates and remarks will be inserted here -->
+        </div>
         <div class="button-group">
             <button type="submit">Save Changes</button>
             <button type="button" onclick="addDynamicFields()">Add</button>
