--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -168,7 +168,7 @@
     <section>
         <div class="bg-baseprimary flex items-center gap-6 rounded-xl px-10 py-10 ipad_min:grid mobile:grid phone_max:grid ipad_min:px-5 ipad_min:py-5 mobile:px-5 mobile:py-5 phone_max:p-7 ">
             <div>
-                <img class="h-72 w-[50rem] phone_max:w-full phone_max:h-full ipad:w-[100rem]" src="{% static 'image/image6 1.png' %}" alt="">
+                <img class="h-72 phone_max:w-full phone_max:h-full ipad:w-[100rem]" style="width:82rem;" src="{% static 'image/image6 1.png' %}" alt="">
             </div>
             <div>
                 <h1 class="font-artifika text-3xl my-2 ipad_min:text-xl mobile:text-xl">New Disha</h1>
